<resources>
    <string name="app_name">Cafeterías UES</string>

    <string name="ingles">Inglés</string>
    <string name="español">Español</string>
    <string name="italiano">Italiano</string>

    <string name="bienvenido">"Cafeterías UES"</string>
    <string name="login">Inicia sesión</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="nuevaCuenta">¿No tienes una cuenta?</string>
    <string name="registrarse">Registrate</string>
    <string name="entrar">Ingresar</string>
    <string name="esEncargado">¿Es encargado?</string>
    <string name="nomLocal">Nombre Local</string>

    <string name="Configuraciones">Configuración</string>
    <string name="CambiarCrede">Cambiar Credenciales</string>
    <string name="Ayuda">Ayuda</string>
    <string name="CerrarSesion">Cerrar Sesion</string>

    <string name="repetircontra">Repetir Contraseña</string>
    <string name="telefono">No. de teléfono</string>
    <string name="Guardar">Guardar Cambios</string>
    <string name="title_activity_drawer_encar">drawerEncar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Pedidos">Pedidos</string>
    <string name="detallePedidos">Detalle del pedido</string>
    <string name="cliente">Nombre del cliente</string>
    <string name="productos">Productos</string>
    <string name="total">Total a pagar</string>
    <string name="ubicación">Ubicación</string>
    <string name="idPedido">Código</string>
    <string name="Asignar">Asignar Repartidor</string>
    <string name="marcar">Marcar como entregado</string>
    <string name="repartidor">Repartidores</string>
    <string name="agregar">Agregar Nuevo</string>
    <string name="crear">Crear</string>

    <string name="nombreMenu">Nombre Menu</string>
    <string name="tipo">Tipo</string>
    <string name="estaPedido">Pedido en curso</string>
    <string name="estaPedidoF">Pedido finalizado</string>
    <string name="local">Local</string>
    <string name="nombre">Nombre</string>
    <string name="Fecha">Fecha:</string>
    <string name="verWs">Ver Pedidos en WS</string>
    <string name="noSeleccionoRepa">No seleccionó ningun repartidor</string>
    <string name="contraseñaNoCoincide">Las contraseñas no coinciden</string>
    <string name="repaCreado">Repartidor creado</string>
    <string name="errorAlCrear">Hay datos incorrectos en el formulario</string>
    <string name="usuarioEnUso">Este nombre de usuario ya existe</string>
    <string name="camposVacios">No puede dejar campos vacios</string>
    <string name="LlenarBase">Llenar Base</string>
    <string name="actRepa">Actualizar Repartidor</string>
    <string name="NoPuedeCambiarCrede">No se puede actualizar nombre de usuario porque tiene pedidos pendientes</string>
    <string name="Actualizar">Actualizar</string>
    <string name="localActualizado">Se ha cambiado el nombre de su local</string>
    <string name="usuarioCreado">Usuario Creado</string>
    <string name="usuarioNoCreado">Usuario No Creado</string>
    <string name="ingreseUnNombre">Ingrese un nombre</string>
    <string name="ingreseUnNumero">Ingrese un número</string>
    <string name="ingreseUnApellido">Ingrese su apellido</string>
    <string name="noHayPedidosLocal">No hay pedidos hechos a tu local</string>
    <string name="noSePuedeEliminarRepa">No se puede eliminar el repartidor, porque esta entregando un pedido</string>
    <string name="noPuedeCambiarCredeEnc">No puede cambiar su nombre de usuario, porque tiene datos de local asociados</string>
    <string name="Nohayws">No hay pedidos hechos a este local en el servidor</string>
    <string name="grupo">Grupo 05 PDM115</string>
    <string name="pedidoEstregado">El pedido ha sido entregado y no se poseen datos</string>
    <string name="Apellido">Apellido</string>
    <string name="cargando">Cargando...</string>
    <string name="cambiarFoto">Cambiar foto de perfil</string>
    <string name="Teléfono">Teléfono</string>

    <string name="crearRepartidor">Agregar nuevo repartidor</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Producto">Producto</string>
    <string name="menu_Encargado">Menu</string>
    <string name="home_second">Home Second</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descDetallePedido">Detalle Pedido</string>
    <string name="pedidoEntregado">Pedido Entregado</string>


    <!-- Inicio Strings Pablo -->
    <string name="title_Local_Cliente">Locales Disponibles</string>
    <string name="menu_local">Menú</string>
    <string name="txtDetallePedido">Detalle Pedido</string>
    <string name="nomCliente">Nombre</string>
    <string name="totalPedido">Total</string>
    <string name="direccion">Direccion</string>
    <string name="agregar_ubicacion">Agregar</string>
    <string name="Ubicaciones">Mis Ubicaciones</string>
    <string name="obtener_ubicacion">Obtener Ubicacion</string>
    <string name="nombre_ubicacion">Nombre:</string>
    <string name="et_nombre_ubicacion">ej: Mi casa</string>
    <string name="dir_ubicacion">Dirección:</string>
    <string name="et_dir_ubicacion">Pais/Ciudad/calle/casa</string>
    <string name="facultad_ubicacion">Facultad:</string>
    <string name="et_facultad_ubicacion">Su facultad (opcional)</string>
    <string name="punto_ubicacion">Referencia:</string>
    <string name="et_punto_ubicacion">Punto de referencia</string>
    <string name="google_places_api_key">AIzaSyCBLQsnfSt179Ky66y3E4rQeLCNvBODOok</string>
    <string name="eliminar_ubicacion_c">De verdad quieres eliminar: </string>
    <!-- Fin Strings Pablo-->
    <!-- Inicio Strings Carlos -->
    <string name="TituloCrearPedidos">Pedidos</string>
    <string name="TituloCrearProducto">Crear Producto</string>
    <string name="TituloAsignarProducto">Asignar Producto</string>
    <string name="TituloModificarProducto">Modificar Producto</string>
    <string name="TituloEliminarProducto">Eliminar Producto</string>
    <string name="TituloProducto">Producto</string>
    <string name="TituloProductoWeb">Producto en la web</string>
    <string name="web">Web</string>
    <string name="botonModificar">Modificar</string>
    <string name="botonEliminar">Eliminar</string>
    <string name="botonCrear">Crear</string>
    <string name="botonModificarEnLaWeb">Modificar en la Web</string>
    <string name="botonEliminarEnLaWeb">Eliminar de la Web</string>
    <string name="botonCrearEnLaWeb">Crear en la Web</string>
    <string name="MensajeDeConfirmacionProducto">¿Desea Eliminar este Producto?</string>
    <string name="nombreProducto">Nombre:</string>
    <string name="precioProducto">Precio:</string>
    <string name="descripcionProducto">Descripción:</string>
    <string name="IdMenu">ID Menú</string>
    <string name="IdProducto">ID Producto</string>
    <string name="TituloContenidoMenu">Contenido del Menu</string>
    <string name="TituloCrearMenu">Crear Menú</string>
    <string name="TituloModificarMenu">Modificar Menú</string>
    <string name="TituloEliminarMenu">Eliminar Menú</string>
    <string name="TituloMenu">Menú</string>
    <string name="fechadesdeMenu">Fecha Desde</string>
    <string name="fechahastaMenu">Fecha Hasta</string>
    <!-- Fin Strings Carlos-->
    <string name="descPedido">Descripción</string>
    <string name="estadoPedido">Pedido entregado</string>
    <string name="agregar_pedido">Agregar al pedido</string>
    <string name="cantidad">Cantidad: </string>
    <string name="hint_cantidad">Ingrese la cantidad</string>
    <string name="seleccionar_ubicacion">Seleccionar Una Ubicacion</string>
    <string name="paraLlevar">Pasaré por el pedido</string>
    <string name="añadir_al_pedido">Añadir al pedido</string>
    <string name="incluye">Incluye</string>
    <string name="nombre_del_menu">Nombre del menu</string>
    <string name="realizar_este_pedido">¿Realizar este pedido?</string>
    <string name="total_a_cancelar">Total a cancelar: $</string>
    <string name="ordenar">Ordenar</string>
    <string name="pedido_realizado">Pedido Realizado</string>
    <string name="no_se_pudo_realizar">No se pudo realizar el pedido:</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_ubicacion">No se seleccionó ubicación</string>
    <string name="num_entero">Inserte un número entero</string>
    <string name="inserte_cantidad">Inserte una cantidad</string>
    <string name="total_1">Total: </string>
    <string name="cancelar_pedido">¿Cancelar Pedido?</string>
    <string name="cancelar_menu">¿Cancelar Menu?</string>
    <string name="cancelar_producto">¿Cancelar Producto?</string>
    <string name="esta_seguro">¿Esta seguro de cancelar \'</string>
    <string name="borrar">Borrar</string>
    <string name="cancelado">Se canceló su pedido correctamente</string>
    <string name="pedidos_realizados">Pedidos Realizados</string>
    <string name="eliminar_ubicacion">¿Eliminar Ubicación?</string>
    <string name="esta_seguro_ubi">¿Esta seguro de eliminar \'</string>
    <string name="no_se_pudo_ubicacion">No se pudo obtener su ubicación</string>
    <string name="llene_campos">Llene todos los campos</string>
    <string name="ubicacion_guardada">Su ubicación se ha guardado</string>
    <string name="ubicacion_no_guardada">Su ubicación no se pudo guardar</string>
    <string name="prueba">prueba</string>
    <string name="mensajeRep">No hay pedidos asignados</string>
    <string name="modificar_direccion">Actualizar Dirección</string>
    <string name="imagen_referencia">Subir imagen de referencia</string>
    <string name="locales">Locales Disponibles</string>
    <string name="mostrar_todo">Mostrar Todos los Menus</string>
    <string name="todos_menu">Todos los menus</string>
    <string name="buscar_menu">Buscar:</string>
    <string name="ingrese_menu">Ingrese búsqueda</string>
    <string name="buscar_menu_btn">Buscar</string>
    <string name="title_activity_maps">Map</string>
</resources>
