<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/Pedidos" />
        <item
            android:id="@+id/nav_repartidor"
            android:icon="@drawable/ic_repartidor"
            android:title="@string/repartidor" />
        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/ic_productos"
            android:title="@string/productos"/>
        <item
            android:id="@+id/nav_menuEncargado"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu_Encargado" />

    </group>
</menu>
