<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_local_cliente"
            android:icon="@drawable/locales"
            android:title="@string/local" />
        <item
            android:id="@+id/nav_pedidos_c"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/Pedidos"/>
        <item
            android:id="@+id/nav_ubicaciones"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/Ubicaciones"/>
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/config"
            android:title="@string/Configuraciones" />
    </group>
</menu>