<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"/>
            <!--app:destination="@id/nav_home_second"-->
    </fragment>
    <!--<fragment
        android:id="@+id/nav_home_second"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>-->

    <fragment
        android:id="@+id/nav_gallery"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.PedidosEncargado.SlideshowFragment"
        android:label="@string/Pedidos"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_repartidor"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.RepartidoresEncargado.fragmentReparEnc"
        android:label="@string/repartidor"
        tools:layout="@layout/fragment_repar_enc" />
    <fragment
        android:id="@+id/nav_config"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.confCliente.fragmentConfig"
        android:label="@string/Configuraciones"
        tools:layout="@layout/fragment_config" />
    <fragment
        android:id="@+id/nav_local_cliente"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.localCliente.fragmentLocalCliente"
        android:label="@string/title_Local_Cliente"
        tools:layout="@layout/fragment_local_cliente" />
    <activity
        android:id="@+id/menusLocal"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.menuCliente.MenusLocal"
        android:label="@string/menu_local"
        tools:layout="@layout/activity_menus_local" />
    <fragment
        android:id="@+id/nav_pedidos_c"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.pedidosCliente.fragmentPedidosCliente"
        android:label="Pedidos"
        tools:layout="@layout/fragment_pedidos_cliente" />
    <fragment
        android:id="@+id/nav_ubicaciones"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.ubicacionCliente.fragmentUbicacion"
        android:label="Mis Ubicaciones"
        tools:layout="@layout/fragment_ubicacion_c" />
    <fragment
        android:id="@+id/nav_producto"
        android:name="sv.edu.ues.fia.eisi.pedidoscafeteria.ui.Producto.Producto_Lista"
        android:label="@string/menu_Producto"
        tools:layout="@layout/fragment_producto__lista" />
</navigation>