<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_fondo"
    tools:context=".ui.LocalEncar.LocalEncargado" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/local"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="normal"
            android:fontFamily="@font/baloo"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imLocalEncargado"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/shopper"
            app:civ_border_color="#FBF6F6"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomLocal"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnActivar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CambiarCrede" />

        <Button
            android:id="@+id/btnGuardarNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Actualizar"
            android:visibility="invisible" />
    </LinearLayout>
</FrameLayout>